[package]
name = "list-prs"
version = "0.1.0"
edition = "2021"

[dependencies]
octocrab = "0.43.0"
tokio = { version = "1.36", features = ["full"] }
chrono = "0.4"
anyhow = "1.0"
tempfile = "3.10"
duct = "0.13"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
git2 = "0.18"

[[bin]]
name = "prview"
path = "src/main.rs"
